--- a/pets/app/build.gradle
+++ b/pets/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -33,13 +35,38 @@ android {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //androidX
+    implementation "androidx.core:core-ktx:$androidXCoreVersion"
+    implementation "androidx.appcompat:appcompat:$appCompatVersion"
+    implementation "androidx.legacy:legacy-support-v4:$androidXLegacyVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$androidXConstraintLayout"
+    implementation "androidx.fragment:fragment-ktx:$androidXFragmentVersion"
+
+    //viewBinding
+    implementation "com.github.jintin:BindingExtension:$viewBindingVersion"
+
+    //ui
+    implementation "com.google.android.material:material:$materialVersion"
+    implementation "com.github.kizitonwose:CalendarView:$calendarViewVersion"
+
+    //singleLiveEvent
+    implementation "com.github.hadilq.liveevent:liveevent:$liveEventVersion"
+
+    //navigation
+    implementation "com.github.terrakok:cicerone:$ciceroneVersion"
+
+    //di
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+
+    //rx
+    implementation "io.reactivex.rxjava2:rxandroid:$rxVersion"
+    implementation "com.jakewharton.rxrelay2:rxrelay:$rxRelayVersion"
+
+    //database
+    implementation "androidx.room:room-runtime:$roomVersion"
+    implementation "androidx.room:room-rxjava2:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
 }
