--- a/pets/build.gradle
+++ b/pets/build.gradle
@@ -1,16 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.30"
+    ext.kotlinVersion = "1.4.30"
+    ext.ktlintVersion = "8.2.0"
+
     repositories {
         google()
         jcenter()
+        maven {url "https://plugins.gradle.org/m2/"}
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlintVersion"
     }
 }
 
@@ -18,9 +19,36 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
+    }
+}
+
+subprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
+
+    ktlint {
+        android = true
+        additionalEditorconfigFile = file(".editorconfig")
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    androidXCoreVersion = "1.3.2"
+    androidXLegacyVersion = "1.0.0"
+    androidXConstraintLayout ="2.0.4"
+    androidXFragmentVersion = "1.3.0"
+    viewBindingVersion = "3.0.0"
+    appCompatVersion = "1.2.0"
+    materialVersion = "1.3.0"
+    calendarViewVersion = "1.0.1"
+    ciceroneVersion = "6.4"
+    daggerVersion = "2.29.1"
+    liveEventVersion = "1.2.0"
+    rxVersion = "2.1.1"
+    rxRelayVersion = "2.1.1"
+    roomVersion = "2.2.6"
 }
