--- a/pets/app/src/main/AndroidManifest.xml
+++ b/pets/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="abdulmanov.eduard.pets">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:name=".presentation.App"
         android:allowBackup="false"
