--- a/pets/build.gradle
+++ b/pets/build.gradle
@@ -50,6 +50,7 @@ ext {
     speedDialVersion = "3.1.1"
     delegateAdapterVersion = "4.0"
     picassoVersion = "2.71828"
+    chartVersion = "v3.1.0"
     ciceroneVersion = "6.4"
     daggerVersion = "2.29.1"
     liveEventVersion = "1.2.0"
