--- a/pets/app/build.gradle
+++ b/pets/app/build.gradle
@@ -80,4 +80,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.room:room-rxjava2:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
+
+    //test
+    testImplementation "junit:junit:$junitVersion"
 }
