--- a/.github/workflows/run_unit_test.yml
+++ b/.github/workflows/run_unit_test.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   Unit-test:
     name: Run unit tests on PR in main
-    runs-on: Ununtu-18.04
+    runs-on: ununtu-latest
     
     steps:
       - uses: actions/checkout@v2
