--- a/.github/workflows/run_unit_test.yml
+++ b/.github/workflows/run_unit_test.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/setup-java@v1
         with: {java-version: 1.8}
       - name: Run unit tests
-        run: bash ./gradlew test
+        run: gradlew test
