--- a/.github/workflows/run_unit_test.yml
+++ b/.github/workflows/run_unit_test.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-java@v1
         with: {java-version: 1.8}
       - name: Make gradlew executable
-        run: chmod +x ./gradlew
+        run: chmod +x gradlew
       - name: Run unit tests
         run: gradlew test
 
