--- a/.github/workflows/run_unit_test.yml
+++ b/.github/workflows/run_unit_test.yml
@@ -7,16 +7,18 @@ on:
     branches: [ main ]
 
 jobs:
-  Unit-test:
-    name: Run unit tests on PR in main
-    runs-on: ubuntu-latest
-    
+  build:
+    runs-on: ubuntu-18.04
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with: {java-version: 1.8}
-      - name: Make gradlew executable
-        run: chmod +x gradlew
-      - name: Run unit tests
-        run: gradlew test
+      - uses: actions/checkout@v1
+
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Unit tests
+        run: |
+          bash ./gradlew test --stacktrace
 
