--- a/.github/workflows/run_unit_test.yml
+++ b/.github/workflows/run_unit_test.yml
@@ -19,5 +19,5 @@ jobs:
           java-version: 1.8
 
       - name: Unit tests
-        run: gradlew test --stacktrace
+        run: bash ./gradlew test --stacktrace
 
