Тест 8 Подправила run_unit_test.yml, чтобы запускались тесты

--- a/.github/workflows/run_unit_test.yml
+++ b/.github/workflows/run_unit_test.yml
@@ -19,5 +19,7 @@ jobs:
           java-version: 1.8
 
       - name: Unit tests
-        run: bash ./gradlew test --stacktrace
+        run: |
+          cd pets
+          bash ./gradlew test --stacktrace
 
